Uploaded image for project: 'Celix'
  1. Celix
  2. CELIX-74

The serviceTrackerCustomizer header uses, but does not include, the serviceReference header.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Critical
    • Resolution: Fixed
    • None
    • 1.0.0-incubating
    • None
    • None

    Description

      The header file 'service_tracker_customizer.h' has references to the type service_reference_pt but this type is not known.
      The header file 'service_reference.h' defines the type but is not included.

      This bug can be reproduced by simply including 'service_tracker_customizer.h' in an empty project without other Celix includes.

      Attachments

        Activity

          People

            Unassigned Unassigned
            mvd Mike van Dongen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 10m
                10m
                Remaining:
                Remaining Estimate - 10m
                10m
                Logged:
                Time Spent - Not Specified
                Not Specified