CELIX-74: Fixed includes to satisfy all types used in the header itself.

git-svn-id: https://svn.apache.org/repos/asf/incubator/celix/trunk@1502141 13f79535-47bb-0310-9956-ffa450edef68